fix scrollbar open styles

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -50,5 +48,5 @@ body {
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
-	overflow: hidden;
 }
+
